players stretching the chat has been fixed
it was a mistake in the player.js-searchPlayer() function: body-bg class has to been removed when sending a route.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -219,6 +219,13 @@ input:focus , button:not(.custom-accordion):focus {
   background-color: var(--lightgreen) !important;
 }
 
+@media (min-width: 456px) and (max-width: 576px) {
+  .col-xs-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+}
+
 /* ----------- Forms ----------- */
 
 .vertical-separator {
